# docgenai

./: .docgenai_ignore  .dockerignore  .envrc  .gitignore  .gitmodules  .markdown-link-check.json  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  CHANGELOG.md  ENHANCED_ANALYSIS_IMPLEMENTATION.md  README.md  RENOVATE_SETUP.md  SIMPLIFIED_ARCHITECTURE_SUMMARY.md  config.yaml  demo_cli_multi_file.py  demo_multi_file.py  pyproject.toml  pytest.ini  renovate.json5  setup-renovate-secrets.sh  simple_test.py  test_enhanced_generation.py  test_integrated_multi_file.py  test_multi_file.py  test_new_analyzer.py  test_real_multi_file.py  test_simple.py  test_simplified_architecture.py
.cursor/rules/: 105-composer-date.mdc  README.md  code-quality-automation.mdc  codebase-understanding.mdc  documentation-maintenance.mdc  git-commit-standards.mdc  review_developer_guide.mdc
.direnv/python-3.12.11/: pyvenv.cfg
.github/: renovate-bot.config.js  renovate.json  renovate.json5
.github/workflows/: pre-merge.yml  renovate.yml
demo3_output/: cache_documentation.md  simple_test_documentation.md
docker/: Dockerfile  README.md  entrypoint.sh  run.sh
docs/: AUTOMATIC_TOKEN_DETECTION_IMPLEMENTATION.md  IMPLEMENTATION_COMPARISON_ANALYSIS.md  MODEL_COMPARISON_ANALYSIS.md  PRE_MERGE_WORKFLOW_SETUP.md  SIMPLIFIED_ARCHITECTURE_SUMMARY.md  SIMPLIFIED_IMPLEMENTATION_SUMMARY.md  architecture.md  developer.md  plan.md
docs/research/: article-1.md  article-2.md
sample_output/: COMPREHENSIVE_ANALYSIS.md  GENERATION_SUMMARY.md  _documentation.md  _documentation.metadata.md  architecture_prompts_documentation.md  base_prompts_documentation.md  builders_documentation.md  cache_documentation.md  chain_documentation.md  cli_documentation.md  codebase_documentation.md  config_documentation.md  context_documentation.md  core_documentation.md  documentation_prompts_documentation.md  group_1_documentation.md  group_2_documentation.md  group_3_documentation.md  index.md  models_documentation.md  prompt_manager_documentation.md  src_summary.md  step_documentation.md  summary.md  templates_documentation.md
scripts/: README.md  regenerate_all_docs.py  test_enhanced_analysis.py
src/docgenai/: __init__.py  cache.py  chunker.py  cli.py  config.py  core.py  enhanced_multi_file_analyzer.py  file_selector.py  models.py  multi_file_analyzer.py  post_processing.py  simple_core.py  templates.py
test_output/: builders_documentation.md  chain_documentation.md  context_documentation.md  index.md  multi_file_demo.md  step_documentation.md
test_output/simple_test/: index.md  multi_file_documentation.md
tests/: test_chaining.py  test_config.py  test_core.py  test_file_selector.py  test_models.py  test_templates.py
(+44 files in other folders)
