[tool.poetry]
name = "docgenai"
version = "0.7.0"
description = "AI-powered documentation and diagramming tool."
authors = ["Mat Davies <ashmere@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.13.0"
click = "^8.2.1"
transformers = "4.53.1"
torch = "^2.7.1"
bitsandbytes = {version = "0.46.1", markers = "sys_platform != 'darwin'"}
accelerate = "^0.34.0"
jinja2 = "^3.1.6"
PyYAML = "^6.0.2"
python-dotenv = "^1.1.1"
pillow = "^11.2.1"
einops = "^0.8.1"
omegaconf = "^2.3.0"
jaxtyping = "^0.3.2"
typeguard = "^4.4.4"
diffusers = "0.34.0"
mlx-lm = {version = "^0.25.0", markers = "sys_platform == 'darwin'"}
openai = "^1.58.1"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
docgenai = "docgenai.cli:cli"

[tool.isort]
profile = "black"
